# uff

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py  test_uffpy.py
.github/workflows/: build.yml  build_and_test.yml  cmake.yml  main.yml  upload_wheels.yml
examples/: CMakeLists.txt  uff.py  uffomg.F90  uffomg_usemod.F90
src/: uff.cpp  uff.hpp
src/fmod/: CMakeLists.txt  uff.F90
src/python/: uffpy.cpp
tests/: test_uffpy.py
