[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11",
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
before-build = "rm -rf {project}/build"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
test-skip = ["*arm64"]
build = ["cp*"]

[tool.cibuildwheel.linux]
archs = ["x86_64"]
build = ["cp*-many*"]
